@@ -566,10 +566,17 @@ class ClassAlias(object):
             if self.non_static_encodable_properties:
                 for attr in self.non_static_encodable_properties:
                     attrs[attr] = getattr(obj, attr)
+<<<<<<< HEAD
 
             if not attrs:
                 attrs = None
 
+=======
+
+            if not attrs:
+                attrs = None
+
+>>>>>>> master
             return attrs
 
         dynamic_props = util.get_properties(obj)
@@ -592,6 +599,7 @@ class ClassAlias(object):
         else:
             for attr in dynamic_props:
                 attrs[attr] = getattr(obj, attr)
+<<<<<<< HEAD
 
         if self.proxy_attrs is not None and attrs:
             for k, v in attrs.copy().iteritems():
@@ -601,6 +609,17 @@ class ClassAlias(object):
         if not attrs:
             attrs = None
 
+=======
+
+        if self.proxy_attrs is not None and attrs:
+            for k, v in attrs.copy().iteritems():
+                if k in self.proxy_attrs:
+                    attrs[k] = self.getProxiedAttribute(k, v)
+
+        if not attrs:
+            attrs = None
+
+>>>>>>> master
         return attrs
 
     def getDecodableAttributes(self, obj, attrs, codec=None):
@@ -1537,6 +1556,15 @@ def register_alias_type(klass, *args):
             check_type_registered(arg)
 
     ALIAS_TYPES[klass] = args
+
+
+def unregister_alias_type(klass):
+    """
+    Removes the klass from the ALIAS_TYPE register.
+
+    @see: L{register_alias_type}
+    """
+    return ALIAS_TYPES.pop(klass, None)
 
 
 def register_package(module=None, package=None, separator='.', ignore=[], strict=True):
